# git_watch

./: CMakeLists.txt  README.md  main.cpp
include/: git.hpp
src/: git.cpp
